rename app + add fragment broadcast receiver

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.0"
 
     defaultConfig {
-        applicationId "com.rezen.rememberstuff"
+        applicationId "com.rezen.reminderapp"
         minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
